--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,3 +3,4 @@ $color-beta: rgba(81, 23, 48, 1);
 $color-gamma: rgba(142, 68, 61, 1);
 $color-delta: rgba(203, 145, 115, 1);
 $color-epsilon: rgba(224, 214, 138, 1);
+$color-zeta: rgba(255, 255, 255, 1);
