--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,3 +1,5 @@
+$focus-outline-width: 3px;
+
 .form-line-item {
     margin-bottom: 20px;
 }
@@ -17,7 +19,8 @@
 
     &:focus {
         border: 1px solid $color-epsilon;
-        padding: 9px 10px;
+        border: $focus-outline-width solid $color-zeta;
+        padding: (10px - $focus-outline-width) 10px;
         outline: 0;
     }
 
@@ -31,7 +34,7 @@
     }
 
     &:disabled {
-        opacity: 0.6;
+        opacity: 0.5;
         outline: 0;
         background-color: $color-gamma;
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -47,6 +50,15 @@
     color: $color-alpha;
     width: 100%;
     height: 200px;
-    overflow-y: scroll;
     resize: none;
+    border-radius: 5px;
+    border: 0;
+    font: 1rem $font-alpha;
+    padding: 10px;
+
+    &:focus {
+        border: $focus-outline-width solid $color-zeta;
+        padding: (10px - $focus-outline-width);
+        outline: 0;
+    }
 }
