--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,3 +4,7 @@ $color-gamma: rgba(142, 68, 61, 1);
 $color-delta: rgba(203, 145, 115, 1);
 $color-epsilon: rgba(224, 214, 138, 1);
 $color-zeta: rgba(255, 255, 255, 1);
+
+$font-alpha: sans-serif;
+
+$root-font-size: 18px;
