--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -52,13 +52,62 @@ $focus-outline-width: 3px;
     height: 200px;
     resize: none;
     border-radius: 5px;
-    border: 0;
+    border: 1px solid $color-gamma;
     font: 1rem $font-alpha;
     padding: 10px;
 
     &:focus {
         border: $focus-outline-width solid $color-zeta;
-        padding: (10px - $focus-outline-width);
+        padding: (11px - $focus-outline-width);
         outline: 0;
+    }
+}
+
+.checkbox {
+    position: relative;
+
+    &__box {
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    &__check,
+    &__focus-border {
+        opacity: 0;
+    }
+
+    &__label {
+        &__text {
+            display: inline-block;
+            vertical-align: middle;
+            color: $color-zeta;
+        }
+
+        &:focus {
+            border: $focus-outline-width solid $color-zeta;
+        }
+    }
+
+    input[type="checkbox"] {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        &:focus {
+            & + .checkbox__label {
+                .checkbox__focus-border {
+                    opacity: 1;
+                }
+            }
+        }
+
+        &:checked {
+            & + .checkbox__label {
+                .checkbox__check {
+                    opacity: 1;
+                }
+            }
+        }
     }
 }
