--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -69,6 +69,7 @@ $focus-outline-width: 3px;
     &__box {
         display: inline-block;
         vertical-align: middle;
+        margin-right: 5px;
     }
 
     &__check,
@@ -81,6 +82,8 @@ $focus-outline-width: 3px;
             display: inline-block;
             vertical-align: middle;
             color: $color-zeta;
+            font-size: 1rem;
+            color: $color-epsilon;
         }
 
         &:focus {
